This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Oct-2002 (Lars Duening)  (3.3.271)
  - (lex.c, prolang.y) Debugged the new inline closure code - it all seems
       to work now. I therefore turned it on by default. (f-020528, f-991104-1)
  - (prolang.y) Removed the already inactive code for hybrid struct literals,
       as nobody wanted them.
  - (autoconf/configure.in) Corrected the problem with newer autoconfs.

03-Oct-2002 (Lars Duening)  (3.3.270)
  - (prolang.y) The new inline closures is alpha-complete: I think I have
       implemented everything, but I haven't tested it yet.
  - (lex.c, prolang.y) Some internal changes to make implementation of
       new inline closures simpler.

02-Oct-2002 (Lars Duening)  (3.3.269)
  - (prolang.y) Added the basic infrastructure to compile an inline closure.
       Still missing: context recognition, translation of local variable
       uses, extended context (': ..' syntax), mandatory local scopes,
       and line numbers.

01-Oct-2002 (Lars Duening)  (3.3.268)
  - (comm.c) Forgot a parameter in an error message (thanks, Freaky!)
  - (main.c, comm) The hostname was initialized to late, so the debug.log
      file was opened with the wrong name (reported by Dafire).

30-Sep-2002 (Lars Duening)  (3.3.267)
  - (comm.c) Changed the fprintf() in the thread cleanup routine into a
      malloc-friendlier dprintf1().
  - (main.c) Added a check into debug_message() if the name of the
      debug log file has already been set (reported by Dafire).
  - (simulate.c) The driver now checks if an object to be loaded appears
      out of nowhere while it is being compiled (this can happen if the mudlib
      warning handler is careless with rename_object()) and throws an error
      (reported by Gnomi).
  - (main.c, comm) New commandline options --hostname and --hostaddr
      to override the values returned by the system. In particular,