@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 271)
-(Parent-Version lpmud 3-3 270)
-(Version-Log "New inline closures are complete.")
+(Project-Version lpmud 3-3 272)
+(Parent-Version lpmud 3-3 271)
+(Version-Log "Removed compilation error.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 04 Oct 2002 23:25:26 -0600")
+(Checkin-Time "Sat, 05 Oct 2002 00:03:16 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +61,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.47 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.334 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.335 644))
   (HISTORY (lpmud/f/49_HISTORY 1.275 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.17 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -141,7 +141,7 @@
   (src/files.c (lpmud/i/50_files.c 1.17 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.10 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.72 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.73 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
