@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+05-Oct-2002 (Lars Duening)  (3.3.272)
+  - (gcollect.c) Oops, MALLOC_TRACE and USE_NEW_INLINES caused a compilation
+       error.
+
 04-Oct-2002 (Lars Duening)  (3.3.271)
   - (lex.c, prolang.y) Debugged the new inline closure code - it all seems
        to work now. I therefore turned it on by default. (f-020528, f-991104-1)
